manifests/bookinfo/app/details-v1-deployment.yaml
# Copyright Istio Authors
# Licensed under the Apache License, Version 2.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  namespace: bookinfo
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: docker.io/istio/examples-bookinfo-details-v1:1.20.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
